assets/scss/pages/_screen_4.scss
.screen {

  &__4 {
    background-color: #f9ecd5;

    &__background {
      width: 100%;
      position: absolute;
      top: 0;
      left: 0;
    }

    &-toplogo {
      position: absolute;
      z-index: 2;
      left: 50%;
      top: 24px;
      width: 20%;
      transform: translateX(-50%);
    }

    .screen__image {
      object-fit: cover;
      height: auto;
      width: 100%;
      position: relative;
      top: 0;
      left: 0;
      z-index: 1;
    }

    &__inner {
      text-align: center;
      position: relative;
      z-index: 2;
      z-index: 10;
      padding: 70% 0 0 0;
    }

    &-toptext {
      position: absolute;
      left: 50%;
      transform: translateX(-50%);
      top: auto;
      z-index: 3;
      max-width: 25%;
      bottom: 34%;
    }

    &-toptitle {
      position: absolute;
      left: 50%;
      transform: translateX(-48%);
      top: auto;
      z-index: 3;
      max-width: 30%;
      bottom: 28%;
      color: #fff;
      font-size: 24px;
      display: flex;
      justify-content: center;
      text-align: center;
      -webkit-text-stroke: .015em black;
      font-weight: 900;
      line-height: 1.2;
      text-shadow: 3px 3px 1px rgba(0, 0, 0, 0.25);
    }

  }

}

